# book_app

./: CMakeLists.txt  main.cpp
dao/include/: author_dao.h
dao/src/: author_dao.c
data/: db.c  db.h  execute.cpp  execute.hpp  local.db
data/schemes/: 001_init.sql  init.sql
models/: author.c  author.h  book.c  book.h  publisher.h
models/include/: author.h  book.h  publisher.h
models/src/: author.c  book.c  publisher.c
src/core/dao/: author_dao.c  author_dao.h
src/core/db/: db.c  db.h
src/core/memory/: arena_api.c  arena_api.h
src/core/models/: author.c  author.h  book.c  book.h  publisher.c  publisher.h
src/dao/: author_dao.c  author_dao.h
src/db/: db.c
src/memory/: arena.c  arena.h
src/models/: author.c  author.h  publisher.h
src/project/: ApplicationManager.cpp  ApplicationManager.hpp  ExecuteManager.cpp  ExecuteManager.hpp  execute.cpp  execute.hpp
src/services/: ArenaGuard.cpp  AuthorService.cpp  AuthorService.hpp  arena_guard.cpp  arena_guard.hpp  author_service.cpp  author_service.hpp
ui/: main_window.cpp  main_window.hpp  mainwindow.cpp  mainwindow.h
widgets/: SpecialButton.cpp  SpecialButton.h
